carbonCycle_Q update. minor changes such as \times -> \cdot, r -> k, etc.

--- a/inst/exercises/linearmodels/carbonCycle/carbonCycle_Q.Rmd
+++ b/inst/exercises/linearmodels/carbonCycle/carbonCycle_Q.Rmd
@@ -14,7 +14,7 @@ output:
 
 # Introduction
 
-In a seminal work, Sarmiento and Gruber (2002) published a global carbon budget of the Earth, where C is exchanged among 7 large compartments ($Figure~1$): atmosphere, marine biota, terrestrial biota (vegetation, soil and detritus), surface of the ocean, intermediate and deep ocean, surface sediments in the ocean, and sediments and rocks (comprising organic carbon, limestone and methane hydrate). 
+In a seminal work, Sarmiento and Gruber (2002) published a global carbon budget of the Earth, where C is exchanged among 7 large compartments (Figure 1): atmosphere, marine biota, terrestrial biota (vegetation, soil and detritus), surface of the ocean, intermediate and deep ocean, surface sediments in the ocean, and sediments and rocks (comprising organic carbon, limestone and methane hydrate). 
 
 In this exercise, you will make a dynamic model of the Earth's global carbon cycle based on this budget. You will then use this model to assess the response of the Earth's carbon cycle to perturbations, tackling the following questions: How, and how fast, does the Earth's carbon cycle respond to perturbations? What is the new steady-state condition? What are the consequences of various carbon reduction scenarios?
 
@@ -26,20 +26,20 @@ In this exercise, you will make a dynamic model of the Earth's global carbon cyc
 
 ## Problem formulation
 
-The ultimate 7 compartment model is best explained based on a simple example where we only consider *two compartments*: the atmosphere, with the total mass of carbon M.ATM, and the biosphere, with the total mass of carbon M.BIO.\footnote{Note the use of dot (".") in the name of the state variable.}
+The ultimate 7 compartment model is best explained based on a simple example where we only consider *two compartments*: the atmosphere, with the total mass of carbon M.ATM, and the biosphere, with the total mass of carbon M.BIO.\footnote{Note the use of dot (".") in the name of the state variable.} This model has been explored in some detail in the tutorial called *largescale* (use the command ``RTMtutorial("largescale")`` to view this tutorial).
 
-At steady-state the mass of carbon is $590$ and $2300~Pg~C$ (Peta gram) in the atmosphere and biosphere, respectively, while the fluxes between the two compartments are $60~Pg~C~yr^{-1}$ ($Figure~1$).\footnote{P stands for Peta, which denotes $10^{15}$.}
+At steady-state the mass of carbon is $590$ and $2300~Pg~C$ (Peta gram) in the atmosphere and biosphere, respectively, while the fluxes between the two compartments are $60~Pg~C~yr^{-1}$ (Figure 1).\footnote{P stands for Peta, which denotes $10^{15}$.}
 
 In the first approximation, we assume that carbon is transferred between the atmosphere and the biosphere at a rate that is *first-order* with respect to the *source compartment*, i.e., linearly proportional to the size of the source. Thus, the mass balance equations in this simplified 2-box model have the form
 
-$$\frac{dM.ATM}{dt}= -F_{AB}+F_{BA} = -r_{AB} \times M.ATM + r_{BA}  \times M.BIO,$$
-$$\frac{dM.BIO}{dt}= +F_{AB}-F_{BA} = r_{AB} \times  M.ATM - r_{BA}  \times M.BIO,$$
-where $F_{AB}$ and $F_{BA}$ are the fluxes from A to B and vice versa (units of $Pg~C~yr^{-1}$), and $r_{BA}$ and $r_{BA}$ are the corresponding first-order rate constants (units of $yr^{-1}$). Note that the formulation $F_{AB} = r_{AB}\times M.ATM$ means that the rate constant $r_{AB}$ represents the fraction of the source compartment transferred per year. We use this mathematical formulation to simulate what happens under transient conditions, such as when the system is perturbed from the steady state.
+$$\frac{dM.ATM}{dt}= -F_{AB}+F_{BA} = -k_{AB} \cdot M.ATM + k_{BA}  \cdot M.BIO,$$
+$$\frac{dM.BIO}{dt}= +F_{AB}-F_{BA} = k_{AB} \cdot  M.ATM - k_{BA}  \cdot M.BIO,$$
+where $F_{AB}$ and $F_{BA}$ are the fluxes from A to B and vice versa (units of $Pg~C~yr^{-1}$), and $k_{BA}$ and $k_{BA}$ are the corresponding first-order rate constants (units of $yr^{-1}$). Note that the formulation $F_{AB} = k_{AB}\cdot M.ATM$ means that the rate constant $k_{AB}$ represents the fraction of the source compartment transferred per year. We use this mathematical formulation to simulate what happens under transient conditions, such as when the system is perturbed from the steady state.
 
-At steady-state, both the carbon mass ($M.ATM$, $M.BIO$) and the total fluxes ($F_{AB}$, $F_{BA}$) are known ($Figure~1$), so we use that information to estimate the first order removal rate constants: 
+At steady-state, both the carbon mass ($M.ATM$, $M.BIO$) and the total fluxes ($F_{AB}$, $F_{BA}$) are known (Figure 1), so we use that information to estimate the first order removal rate constants: 
 
-$$r_{AB} = F_{AB}/M.ATM = 60/590\,yr^{-1},$$
-$$r_{BA} = F_{BA}/M.BIO = 60/2300\,yr^{-1}.$$
+$$k_{AB} = F_{AB}/M.ATM = 60/590\,yr^{-1},$$
+$$k_{BA} = F_{BA}/M.BIO = 60/2300\,yr^{-1}.$$
 
 Obviously, if this model is run dynamically with the steady-state values as initial conditions, then the carbon masses should stay constant. Thus, the first steps in the implementation of this model in R must include the verification that this is true.
 
@@ -49,10 +49,10 @@ Before you embark on the development of the more complex model, implement and ap
 
 parameter   |  value       unit     |
 ------------|-------------|------
-$r_{AB}$    | 60/590      |$yr^{-1}$|
-$r_{BA}$    | 60/2300     |$yr^{-1}$|
+$k_{AB}$    | 60/590      |$yr^{-1}$|
+$k_{BA}$    | 60/2300     |$yr^{-1}$|
 
-as estimated above.  You can start with the R-markdown template file *RTM_0D.Rmd* to implement this model.\footnote{You can obtain this file from Rstudio: File $\rightarrow$ new File $\rightarrow$ Rmarkdown $\rightarrow$ from template $\rightarrow$ RTM\_0D. Save this file under a different name, e.g., Ccycle\_2box.Rmd. Do not forget to change the heading of this file.}
+as estimated above.  You can start with the R-markdown template file ``RTM_0D.Rmd`` to implement this model.\footnote{You can obtain this file from Rstudio: File $\rightarrow$ new File $\rightarrow$ Rmarkdown $\rightarrow$ from template $\rightarrow$ RTM\_0D. Save this file under a different name, e.g., Ccycle\_2box.Rmd. Do not forget to change the heading of this file.}
 
 * 	Run the model for 100 years, with initial conditions that represent the steady-state (*M.ATM = 590*, *M.BIO = 2300*). The system should be at steady-state, i.e., none of the pools should change in time.
 
@@ -62,15 +62,15 @@ as estimated above.  You can start with the R-markdown template file *RTM_0D.Rmd
 
 ## Task 2: Complex representation of the Earth's carbon cycle with 7 compartments
 
-Now you are ready to develop and implement a more realistic carbon cycle model based on the schematic diagram shown in $Figure~1$.
+Now you are ready to develop and implement a more realistic carbon cycle model based on the schematic diagram shown in Figure 1.
 
 * Based on the diagram, create the mass balance equations for each carbon reservoir. Number the reservoirs and give them sensible names, e.g., M1.ATMOSPHERE, M2.SURFACEOCEAN, etc. Give sensible names to the fluxes that represent the source and sink, e.g., $F1.2$ is the flux from M1.ATMOSPHERE to M2.SURFACEOCEAN, and $F2.1$ is the reverse flux, etc.
 
-* Assume first-order kinetics for each flux, i.e., $F1.2 = r1.2 \times M1.ATMOSPHERE$, etc. Estimate the corresponding rate constants using the steady-state situation depicted in $Figure~1$.
+* Assume first-order kinetics for each flux, i.e., $F1.2 = k1.2 \times M1.ATMOSPHERE$, etc. Estimate the corresponding rate constants using the steady-state situation depicted in Figure 1.
 
-* Implement the model in R. Save it in a different file, e.g., Ccycle_7box.Rmd.
+* Implement the model in R. Save it in a different file, e.g., ``Ccycle_7box.Rmd``.
 
-* Solve the model for 1000 years, using steady-state masses as initial conditions. This model should be at steady-state, else you have made an error that you need to fix!
+* Solve the model for 1000 years, using steady-state masses as initial conditions. This model should be at steady-state, else you have made an error that you need to fix before going any further!
 
 * Run the model to study the consequences of the following scenarios.
 
@@ -88,7 +88,7 @@ Assess the response of the system to an instantaneous deforestation (similar as 
 
 ### Scenario 2: Burning of fossil fuel at a constant rate
 
-* Implement in your model fossil fuel burning as an extra---constant---flux to the atmosphere. Think from which reservoir this carbon originates.
+* Implement in your model fossil fuel burning as an extra (constant) flux to the atmosphere. Think from which reservoir this carbon originates.
 
 * The current fossil fuel emission is 10 $Pg~C~yr^{-1}$. Use your model to estimate the response of the different carbon reservoirs to emissions equal to 5, 10 and 20 $Pg~C~yr^{-1}$ over a time interval of 1000 years. Assume that the emissions would stay constant over this time scale.
 
@@ -104,7 +104,7 @@ Assume that the rate of fossil fuel emission to the atmosphere increased linearl
 ```
 F.fuel <- a.fuel * t * (t < t_em)
 ```
-where a.fuel describes the linear increase in the emission rate and t_em defines the time at which emissions drop to 0. Note that the term "(t < t_em)", which is a logical expression, will be 1 as long as the condition is true (logical TRUE), whereas it will be 0 if the condition is not fulfilled (logical FALSE). Assume a.fuel = $0.05~Pg~C~yr^{-2}$ and t_em = $200~yr$.
+where ``a.fuel`` describes the linear increase in the emission rate and ``t_em`` defines the time at which emissions drop to 0. Note that the term ``(t < t_em)``, which is a logical expression, will be 1 as long as the condition is true (logical TRUE), whereas it will be 0 if the condition is not fulfilled (logical FALSE). Assume ``a.fuel`` = $0.05~Pg~C~yr^{-2}$ and ``t_em`` = $200~yr$.
 
 * Run this model for 1000 years. Where will most of the carbon end up after 1000 years?
 
