--- a/inst/tutorials/09enzymatic/enzymatic.Rmd
+++ b/inst/tutorials/09enzymatic/enzymatic.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "RTM course - Enzymatic Rate Laws"
+title: "RTM course - Rate Laws for Enzymatic Reactions"
 author: "Karline Soetaert and Lubos Polerecky"
 description: "video and exercises on enzymatic reactions (mainly Michaelis-Menten)"
 date: "June 2021"
@@ -24,6 +24,8 @@ You are advised to watch the following video first.
 * 5:50 Application to organic matter mineralization
 
 ![](https://www.youtube.com/watch?v=z2p_qPvRuTg&list=PLx8PHcDdmF-uD1Pr07TU9SzlhlGpfrxqn&index=6)
+
+Slides available at <a href="https://drive.google.com/drive/folders/1Bys0-xzXLCpFpWhD-HrH6jDKOyl8iJMd" target="_blank">google-drive</a>
 
 You can also read the following section(s) of the textbook:
 
@@ -71,59 +73,71 @@ question(sprintf("What is the name of the parameter $K_A$ in the Michaelis-Mente
 
 ```{r enzShape, echo=FALSE}
 question(sprintf("What is the shape of the curve in the Michaelis-Menten rate expression $\\frac{[A]}{[A]+K_A}$?"), type = "learnr_radio",
+ answer("Square-root"),
+ answer("1 minus Exponential"),
  answer("Hyperbola",  correct = TRUE),
  answer("Parabola"),
- answer("Exponential")
+ answer("Exponential"),
+ answer("Arc-tan")
 )
 ```
 
-```{r, echo=FALSE, fig.width=8, fig.height=4}
+```{r, echo=FALSE, fig.width=6, fig.height=4}
 A <- 0:100
-par(mfrow=c(1,3))
+par(mfrow=c(2,3))
+plot(x=A,y=sqrt(A)/10, main="Square-root", ylab="", xlab="[A]", type="l", lwd=2)
+plot(x=A,y=1-exp(-A/30), main="1 minus exponential", ylab="", xlab="[A]", type="l", lwd=2)
 plot(x=A,y=A/(A+10), main="Hyperbola", ylab="", xlab="[A]", type="l", lwd=2)
 plot(x=A,y=1-(A-50)^2/2500, main="Parabola", ylab="", xlab="[A]", type="l", lwd=2)
 plot(x=A,y=0.001^(-A/200), main="exponential", ylab="", xlab="[A]", type="l", lwd=2)
+plot(x=A,y=atan(A/20)/(pi/2), main="Arc-tan", ylab="", xlab="[A]", type="l", lwd=2)
 ```
 
 ## Michaelis-Menten use
 
 ```{r enzUse, echo=FALSE}
-msg <- "When [A] is very small, the Michaelis-Menten rate expression $\\frac{[A]}{[A]+K_A}$ can be approximated as: $\\frac{[A]}{K_A}$ ~ $r[A]$ which is first-order in [A]"
+msg <- "When [A] is very small ($[A]\\ll K_A$), the Michaelis-Menten rate expression can be approximated as $\\frac{[A]}{[A]+K_A}\\approx \\frac{[A]}{K_A} = \\frac{1}{K_A}\\cdot [A] \\equiv r\\cdot [A]$, which is first-order in [A]."
 question("Michaelis-Menten kinetics is approximated by first-order kinetics when the substrate concentration is", type = "learnr_radio",
  answer("around the affinity concentration"),
  answer("much lower than the affinity concentration", correct = TRUE),
  answer("much greater than the affinity concentration"),
- incorrect = paste("incorrect. ", msg),
- correct = paste("correct. ", msg)
+ incorrect = paste("Incorrect. ", msg),
+ correct = paste("Correct. ", msg)
  
 )
 ```
 
 ```{r enzUse2, echo=FALSE}
-msg <- "When [A] is very large, the Michaelis-Menten rate expression $\\frac{[A]}{[A]+K_A}$ can be approximated as: $\\frac{[A]}{[A]} \\approx 1$ which is zero-order in [A]"
+msg <- "When [A] is very large ($[A]\\gg K_A$), the Michaelis-Menten rate expression can be approximated as $\\frac{[A]}{[A]+K_A} \\approx \\frac{[A]}{[A]} \\equiv 1$, which is zero-order in [A]."
 
 question("Michaelis-Menten kinetics is approximated by zero-order kinetics when the substrate concentration is", type = "learnr_radio",
  answer("around the affinity concentration"),
  answer("much lower than the affinity concentration"),
  answer("much greater than the affinity concentration", correct = TRUE),
- incorrect = paste("incorrect. ", msg),
- correct = paste("correct. ", msg)
+ incorrect = paste("Incorrect. ", msg),
+ correct = paste("Correct. ", msg)
 )
 ```
 
 ```{r, echo=FALSE, fig.width=8, fig.height=4}
 A <- 0:100
+A2 <- 0:300
 ks <- 10
 par(mfrow=c(1,3))
-plot(x=A,y=A/(A+10), main="Michaelis-Ment3n", ylab="", xlab="[A]", type="l", lwd=2)
-plot(x=A,y=A/ks, main="first-order", ylab="", xlab="[A]", type="l", lwd=2)
-plot(x=A,y=rep(1, times=101), main="zero-order", ylab="", xlab="[A]", type="l", lwd=2)
+plot(x=A,y=A/(A+ks), main="Michaelis-Menten (KA=10)", ylab="", xlab="[A]", type="l", lwd=2)
+plot(x=A,y=A/(A+ks), main="first-order approximation", ylab="", xlab="[A]", type="l", lwd=2, lty=1, 
+     xlim=c(0,40), ylim=c(0,1))
+lines(x=A,y=A/ks, ylab="", xlab="[A]", type="l", lwd=2, lty=2, col=2)
+plot(x=A2,y=A2/(A2+ks), main="zero-order approximation", ylab="", xlab="[A]", type="l", lwd=2, lty=1,
+     ylim=c(0,1))
+lines(x=A2,y=rep(1, times=301), ylab="", xlab="[A]", type="l", 
+      lwd=2, lty=2, col=2)
 ```
 
 ## Recognizing rate-limitation
 
 ```{r enzRateLim, echo=FALSE}
-msg <- sprintf("The dependency of the process on A is given by the Michaelis-Menten kinetics $\\frac{[A]}{[A]+K_A}$; the dependency on B is given by $\\frac{K_B}{[B] + K_B}$ which is equal to $1-\\frac{[B]}{[B] + K_B}$, and this function will decrease with increasing [B] (inhibition); the dependency on C is given by $r \\times [C]$, which is a first-order function with respect to [C]")
+msg <- sprintf("The dependency of the process on A is given by the Michaelis-Menten kinetics $\\frac{[A]}{[A]+K_A}$; the dependency on B is given by $\\frac{K_B}{[B] + K_B}$ which is equal to $1-\\frac{[B]}{[B] + K_B}$, and this function will decrease with increasing $[B]$ (inhibition); the dependency on C is given by $r \\times [C]$, which is first-order with respect to [C].")
 
 question(sprintf("How would you characterize a process whose rate is described by the following rate expression (where $r$, $K_A$ and $K_B$ are constants): $R = r \\times \\frac{[A]}{[A]+K_A} \\times \\frac{K_B}{[B] + K_B} \\times [C]$?"), type = "learnr_checkbox",
  answer("The process is stimulated by substrate A",  correct = TRUE),
@@ -132,13 +146,12 @@ question(sprintf("How would you characterize a process whose rate is described b
  answer("The process is inhibited by substrate B",  correct = TRUE),
  answer("The process is first-order with respect to substrate C",  correct = TRUE),
  answer("The process is zero-order with respect to substrate C"),
- incorrect = paste("incorrect. ", msg),
- correct = paste("correct. ", msg)
+ incorrect = paste("Incorrect. ", msg),
+ correct = paste("Correct. ", msg)
  )
 ```
 
-## Textbook and Slides
+## Textbook
 
 Karline Soetaert, Peter M.J. Herman (2009). A Practical Guide to Ecological Modelling. Springer Netherlands. DOI: 10.1007/978-1-4020-8624-3.
 
-Slides available at <a href="https://drive.google.com/drive/folders/1Bys0-xzXLCpFpWhD-HrH6jDKOyl8iJMd" target="_blank">google-drive</a>
