--- a/inst/exercises/chemistry/equilibriumHCO3/equilibriumHCO3.Rmd
+++ b/inst/exercises/chemistry/equilibriumHCO3/equilibriumHCO3.Rmd
@@ -1,5 +1,7 @@
 ---
-title: 'Local Equilibrium Chemistry in R --- part II: Two Equilibrium Reactions'
+title: |
+  | Local Equilibrium Chemistry in R --- part II:
+  | Two Equilibrium Reactions
 subtitle: "Exercises Accompanying the Course Reaction Transport Modelling in the Hydrosphere"
 author: "Lubos Polerecky and Karline Soetaert, Utrecht University"
 date: "February 2021"
